# GIAIC-Q4-Hackathon-2

Phase_1/: .gitignore  requirements.txt  test_mvp.py
Phase_1/.specify/memory/: constitution.md
Phase_1/history/prompts/001-core-todo-cli/: 001-core-todo-cli-specification.spec.prompt.md  002-implementation-planning.plan.prompt.md  003-task-generation.tasks.prompt.md
Phase_1/history/prompts/constitution/: 001-phase-i-constitution-creation.constitution.prompt.md
Phase_1/specs/001-core-todo-cli/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
Phase_1/specs/001-core-todo-cli/checklists/: requirements.md
Phase_1/specs/001-core-todo-cli/contracts/: cli-commands.md
Phase_1/src/cli/: commands.py  main.py
Phase_1/src/models/: task.py
Phase_1/src/services/: task_service.py
Phase_1/src/utils/: messages.py
Phase_2/: .gitignore  CLAUDE.md  render.yaml
Phase_2/.specify/memory/: constitution.md
Phase_2/backend/: .env.example  pyproject.toml  requirements.txt
Phase_2/backend/src/: main.py
Phase_2/backend/src/api/: dependencies.py  todos.py
Phase_2/backend/src/db/: connection.py
Phase_2/backend/src/models/: todo.py
Phase_2/backend/src/schemas/: message.py  todo.py
Phase_2/frontend/: package-lock.json  package.json
Phase_2/frontend/src/app/: globals.css  layout.tsx  page.tsx
Phase_2/frontend/src/components/: EditTodoForm.tsx  TodoForm.tsx  TodoItem.tsx  TodoList.tsx
Phase_2/frontend/src/services/: api.ts
Phase_2/specs/001-web-todo-app/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
(+8 files in other folders)
